Login Forgot , Account Setting

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,3 +40,9 @@
 @import './pages/apps';
 
 @import 'vue3-perfect-scrollbar/dist/vue3-perfect-scrollbar.css';
+
+
+
+.logoStyleHeader{
+    max-width:180px;
+}
